manager/manifests/operator.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator
  namespace: $CORTEX_NAMESPACE
  labels:
    workloadType: operator
    workloadID: operator
spec:
  replicas: 1
  selector:
    matchLabels:
      workloadID: operator
  template:
    metadata:
      labels:
        workloadID: operator
        workloadType: operator
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: operator
      containers:
      - name: operator
        image: $CORTEX_IMAGE_OPERATOR
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 150m
            memory: 128Mi
          limits:
            cpu: 2000m
            memory: 1024Mi
        ports:
          - containerPort: 8888
        volumeMounts:
          - name: cortex-config
            mountPath: /configs/cortex
      volumes:
        - name: cortex-config
          configMap:
            name: cortex-config

---

apiVersion: v1
kind: Service
metadata:
  namespace: $CORTEX_NAMESPACE
  name: operator
  labels:
    workloadType: operator
spec:
  selector:
    workloadID: operator
  ports:
  - port: 8888
    name: http
  selector:
    workloadID: operator

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: operator-gateway
  namespace: $CORTEX_NAMESPACE
spec:
  selector:
    istio: operator-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/customgateway-certs/tls.crt
      privateKey: /etc/istio/customgateway-certs/tls.key

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: operator
  namespace: $CORTEX_NAMESPACE
spec:
  hosts:
  - "*"
  gateways:
  - operator-gateway
  http:
  - route:
    - destination:
        host: operator
        port:
          number: 8888
